--- a/branches/jeremy/res/xml/lime_dayi_shift.xml
+++ b/branches/jeremy/res/xml/lime_dayi_shift.xml
@@ -75,7 +75,7 @@
 	<Row android:rowEdgeFlags="bottom">
 		<Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done"
 			android:keyWidth="15%p" android:keyEdgeFlags="left" />
-		<Key android:codes="-2" android:keyLabel="!@#" android:keyWidth="10%p" />
+		<Key android:codes="-2" android:keyLabel="123" android:keyWidth="10%p" />
 
 		<Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"
 			android:keyWidth="30%p" android:isRepeatable="true" />
