--- a/branches/jeremy/res/layout/setting.xml
+++ b/branches/jeremy/res/layout/setting.xml
@@ -11,7 +11,7 @@
 		License for the specific language governing permissions and **
 		limitations under the License. */
 	-->
-<ScrollView android:id="@+id/ScrollView01"
+<ScrollView android:id="@+id/SettingsView"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableLayout android:id="@+id/TableLayout01"
@@ -32,7 +32,7 @@
 
 		
 
-	<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@string/lime_setting_title" android:text="@string/lime_setting_title"></TextView>
+<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@string/lime_setting_title" android:text="@string/lime_setting_title"></TextView>
 </TableRow>
 <TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lime_setting_operation_notice1"></TextView>
 </TableRow>
@@ -44,8 +44,37 @@
 <TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content" android:layout_height="wrap_content"><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lime_setting_operation_info2"></TextView>
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtInfoAmount"></TextView>
 </LinearLayout>
+</TableRow>
 
-</TableRow><TableRow android:id="@+id/TableRow05" android:layout_width="wrap_content" android:layout_height="wrap_content">
+<TableRow android:id="@+id/TableRow13" android:layout_width="wrap_content" android:layout_height="wrap_content"><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lime_setting_operation_info1_cj"></TextView>
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cjtxtInfoVersion"></TextView>
+</LinearLayout>
+</TableRow>
+<TableRow android:id="@+id/TableRow14" android:layout_width="wrap_content" android:layout_height="wrap_content"><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lime_setting_operation_info2"></TextView>
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cjtxtInfoAmount"></TextView>
+</LinearLayout>
+</TableRow>
+
+<TableRow android:id="@+id/TableRow15" android:layout_width="wrap_content" android:layout_height="wrap_content"><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lime_setting_operation_info1_dayi"></TextView>
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dayitxtInfoVersion"></TextView>
+</LinearLayout>
+</TableRow>
+<TableRow android:id="@+id/TableRow16" android:layout_width="wrap_content" android:layout_height="wrap_content"><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lime_setting_operation_info2"></TextView>
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dayitxtInfoAmount"></TextView>
+</LinearLayout>
+</TableRow>
+
+<TableRow android:id="@+id/TableRow17" android:layout_width="wrap_content" android:layout_height="wrap_content"><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lime_setting_operation_info1_bpmf"></TextView>
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/bpmftxtInfoVersion"></TextView>
+</LinearLayout>
+</TableRow>
+<TableRow android:id="@+id/TableRow18" android:layout_width="wrap_content" android:layout_height="wrap_content"><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lime_setting_operation_info2"></TextView>
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/bpmftxtInfoAmount"></TextView>
+</LinearLayout>
+</TableRow>
+
+
+<TableRow android:id="@+id/TableRow05" android:layout_width="wrap_content" android:layout_height="wrap_content">
 <LinearLayout android:id="@+id/LinearLayout05" android:layout_width="wrap_content" android:layout_height="wrap_content"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnLoadLocal" android:text="@string/lime_setting_btn_load_local"></Button></LinearLayout>
 </TableRow>
 <TableRow android:id="@+id/TableRow06" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView06" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lime_setting_operation_notice2"></TextView>
